fix: Unexpected unknown pseudo-element selector "::webkit-scrollbar"

--- a/themes/default/css/template2.css
+++ b/themes/default/css/template2.css
@@ -333,7 +333,7 @@ table.dataTable {
     content: ' *';
 }
 
-.element::webkit-scrollbar {
+.element::-webkit-scrollbar {
     width: 0 ! important
 }
 
